changes_on_nurses 040821

--- a/src/app/emailmanagement/emailmanagement.component.html
+++ b/src/app/emailmanagement/emailmanagement.component.html
@@ -253,7 +253,7 @@
                                     <label>תאור האירוע</label>
                                 </div>
                                 <mat-form-field class="example-full-width">
-                                    <textarea type="text" matInput formControlName="ContentToShow"></textarea>
+                                    <textarea type="text" matInput rows="5" formControlName="ContentToShow"></textarea>
                                 </mat-form-field>
                             </li>
                         </div>
