--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -14,24 +14,18 @@
     </div>
     <div class="modal-body">
         <div class="row">
-            <div class="col-9">
+            <!-- <div class="col-9">
                 <div class="form-group">
                     <mat-form-field>
                         <input matInput autocomplete="off" class="form-control" formControlName="ReportTitle"
                             placeholder="נושא" type="text" />
                     </mat-form-field>
                 </div>
-            </div>
-            <div class="col-3">
-                <section class="example-section">
-                    <mat-checkbox class="example-margin" formControlName="toContinue"
-                        (change)="autoDate($event.checked)">דורש
-                        המשך טיפול</mat-checkbox>
-                </section>
-            </div>
+            </div> -->
+            
             <div class="col">
                 <div class="form-group">
-                    <mat-form-field appearance="fill">
+                    <mat-form-field>
                         <mat-label>מחלקה</mat-label>
                         <input type="text" aria-label="department" matInput [formControl]="departmentfilter"
                             [matAutocomplete]="auto2">
@@ -66,6 +60,13 @@
                         </mat-select>
                     </mat-form-field>
                 </div>
+            </div>
+            <div class="col" style="align-self: center;">
+                <section class="example-section">
+                    <mat-checkbox class="example-margin" formControlName="toContinue"
+                        (change)="autoDate($event.checked)">דורש
+                        המשך טיפול</mat-checkbox>
+                </section>
             </div>
             <!-- <div class="col">
                 <div class="form-group">
