--- a/src/app/nurses-dashboard/nurses-dashboard.component.html
+++ b/src/app/nurses-dashboard/nurses-dashboard.component.html
@@ -7,14 +7,14 @@
                     <div dir="rtl" class="card-body">
                         <form class="form" [formGroup]="searchReportsGroup">
                             <div class="row">
-                                <!-- <div class="col-12">
+                                <div class="col-12">
                                     <div class="form-group">
                                         <mat-form-field>
-                                            <input matInput autocomplete="off" placeholder="נושא דווח"
-                                                formControlName="OpenText" />
+                                            <input matInput autocomplete="off" placeholder="מספר מקרה"
+                                                formControlName="CaseNumber" />
                                         </mat-form-field>
                                     </div>
-                                </div> -->
+                                </div>
                                 <div class="col">
                                     <div class="form-group lh-37">
                                         <mat-form-field>
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="col">
                                     <div class="form-group lh-37">
-                                        <mat-form-field appearance="fill">
+                                        <mat-form-field>
                                             <mat-label>מחלקה</mat-label>
                                             <input type="text" aria-label="department" matInput
                                                 [formControl]="departmentfilter" [matAutocomplete]="auto2">
@@ -125,10 +125,10 @@
                 <td mat-cell *matCellDef="let element"> {{element.date}} </td>
             </ng-container>
 
-            <ng-container matColumnDef="title">
+            <!-- <ng-container matColumnDef="title">
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;"> נושא דווח </th>
                 <td mat-cell *matCellDef="let element"> {{element.title}} </td>
-            </ng-container>
+            </ng-container> -->
 
             <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef style="text-align: center;"> סטטוס דווח </th>
