--- a/src/app/fill-report/fill-report.component.html
+++ b/src/app/fill-report/fill-report.component.html
@@ -1,10 +1,10 @@
 <form dir="rtl" class="form col" [formGroup]="ReportGroup">
     <div class="modal-header text-right">
         <div class="row mt-3">
-            <div class="col-6 text-center"><u>תאריך נוכחי : {{date2}}</u>
+            <div class="col-6 text-center"><u>{{date2}}</u>
             </div>
             <div class="col-4 text-center">
-                <u>שעה נוכחית : {{time2}}</u>
+                <u>{{time2}}</u>
             </div>
         </div>
         <!-- <h4 class="modal-title text-center">דווח</h4> -->
