--- a/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
+++ b/src/app/nurses-manage-dashboard/nurses-manage-dashboard.component.html
@@ -141,6 +141,8 @@
                         </div>
                         <div class="list-style text-center" style="font-size: 24px;">תפוסה: {{item.OccupancyPerDepart}}
                         </div>
+                        <div class="list-style text-center" style="font-size: 24px;">תפוסה: {{item.PercentOccupancy}} %
+                        </div>
                     </mat-card>
                 </div>
             </div>
