--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -303,6 +303,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" routerLink="emailsdashboard">דאשבורד פניות</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" routerLink="publicinquiriescharts">גרפים</a>
+                            </li>
                         </ul>
                     </mat-expansion-panel>
                 </mat-accordion>
