--- a/src/app/scanners/scanners.component.html
+++ b/src/app/scanners/scanners.component.html
@@ -51,6 +51,37 @@
                             mat-table
                             [dataSource]="dataSource"
                         >
+                            <ng-container matColumnDef="select">
+                                <th mat-header-cell *matHeaderCellDef>
+                                    <mat-checkbox
+                                        class="d-none"
+                                        (change)="
+                                            $event ? masterToggle() : null
+                                        "
+                                        [checked]="
+                                            selection.hasValue() &&
+                                            isAllSelected()
+                                        "
+                                        [indeterminate]="
+                                            selection.hasValue() &&
+                                            !isAllSelected()
+                                        "
+                                    >
+                                    </mat-checkbox>
+                                </th>
+                                <td mat-cell *matCellDef="let row">
+                                    <mat-checkbox
+                                        (click)="$event.stopPropagation();"
+                                        (change)="
+                                            $event
+                                                ? selection.toggle(row)
+                                                : null;CheckNumberOfSelection()
+                                        "
+                                        [checked]="selection.isSelected(row)"
+                                    >
+                                    </mat-checkbox>
+                                </td>
+                            </ng-container>
                             <ng-container matColumnDef="RowID">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מס' שורה
@@ -58,7 +89,7 @@
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.RowID }}
                                 </td>
-                            </ng-container>                          
+                            </ng-container>
                             <ng-container matColumnDef="BoxID">
                                 <th mat-header-cell *matHeaderCellDef>
                                     מס' קרטון
@@ -66,7 +97,7 @@
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.BoxID }}
                                 </td>
-                            </ng-container> 
+                            </ng-container>
                             <ng-container matColumnDef="TotalCases">
                                 <th mat-header-cell *matHeaderCellDef>
                                     סה"כ מקרים
@@ -74,7 +105,7 @@
                                 <td mat-cell *matCellDef="let element">
                                     {{ element.TotalCases }}
                                 </td>
-                            </ng-container> 
+                            </ng-container>
                             <ng-container matColumnDef="CLICK">
                                 <th
                                     mat-header-cell
@@ -137,7 +168,7 @@
                                     *matHeaderCellDef
                                     width="50"
                                 >
-                                   הדפסה
+                                    הדפסה
                                 </th>
                                 <td mat-cell *matCellDef="let element">
                                     <div class="example-button-container">
@@ -189,6 +220,7 @@
                             <tr
                                 mat-row
                                 *matRowDef="let row; columns: displayedColumns"
+                                
                             ></tr>
                         </table>
                     </div>
@@ -196,7 +228,7 @@
                     <mat-paginator
                         [length]="resultsLength"
                         [pageSizeOptions]="[5, 10, 20, 50, 100]"
-                        [pageSize]="10"
+                        [pageSize]="100"
                         showFirstLastButtons
                         (page)="getPaginatorData($event)"
                     ></mat-paginator>
@@ -215,7 +247,16 @@
 >
     <i class="material-icons">add</i>
 </button>
-
+<button
+    *ngIf="selectedOn"
+    id="SendBtn"
+    (click)="sendcasenumberstosafeNew()"
+    class="row-data"
+    mat-fab
+    color="primary"
+>
+    <mat-icon>exit_to_app</mat-icon>
+</button>
 <ng-template #cartoonNumberModal let-modal>
     <form
         dir="rtl"
